kubernetes/apps/security/wazuh/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wazuh
spec:
  hostnames:
    - wazuh.68cc.io
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: wazuh-dashboard
          port: 443
          namespace: security
      matches:
        - path:
            type: PathPrefix
            value: /
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: wazuh-agent
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: wazuh-agent
  rules:
    - backendRefs:
        - name: wazuh-manager
          port: 1514
          namespace: security
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: wazuh-enrollment
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: wazuh-enrollment
  rules:
    - backendRefs:
        - name: wazuh
          port: 1515
          namespace: security
