kubernetes/apps/security/wazuh/app/wazuh-syslog-tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: wazuh-syslog-tcp
  namespace: security
spec:
  parentRefs:
    - name: tcp-gateway
      namespace: network
      sectionName: wazuh-syslog-tcp
  rules:
    - backendRefs:
        - name: wazuh-workers
          port: 5140
          namespace: security
